--- a/source/.htaccess
+++ b/source/.htaccess
@@ -7,4 +7,4 @@ RewriteCond %{REQUEST_URI} /public/
 RewriteRule ^public/(.*)$ app/public/$1 [L]
 
 RewriteCond %{REQUEST_URI} !/public/
-RewriteRule ^([a-zA-Z0-9\-\_\/\.]*)$ rooter.php?params=$1 [QSA]
+RewriteRule ^([a-zA-Z0-9\-\_\/\.]*)$ router.php?params=$1 [QSA]
